[project]
name = "exttorch"
version = "0.8.8"
authors = [
  { name="denis-spe", email="denisbrian07@gmail.com" },
]
description = "A torch sequential extension with hyperparameter tuner for Sequential model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/denis-spe/exttorch"
Issues = "https://github.com/denis-spe/exttorch/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools]
package-dir = {"" = "src"}

